--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ simple_logger = "1.11.0"
 # Time and measurement
 chrono = "0.4.19" # Improved Time and Date
 uom = { version = "0.31.1", default-features = false, features = ["si", "use_serde", "u16", "f64"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0.130", features = ["derive"] }
 thiserror = "1.0.29"
+serde_json = "1.0.67"
