--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "fit2json"
 version = "0.1.0"
+authors = ["evensolberg <even.solberg@gmail.com>"]
 edition = "2018"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
