--- a/fit2csv/Cargo.toml
+++ b/fit2csv/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fit2csv"
-version = "0.2.6"
+version = "0.2.7"
+description = "Parses .FIT files to .JSON and .CSV"
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
 edition = "2018"
