--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "gpx2csv"
 version = "0.0.1"
+description = "Parses .GPX files to .JSON and .CSV"
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
 edition = "2018"
