--- a/fit2csv/Cargo.toml
+++ b/fit2csv/Cargo.toml
@@ -14,7 +14,6 @@ fitparser = "0.4"  # Fitbit
 # System utilities
 clap =  { version = "2.3.3" }
 log = "0.4.14"
-simple_logger = "1.11.0"
 
 # Time and measurement
 chrono = "0.4.19" # Improved Time and Date
@@ -24,3 +23,6 @@ uom = { version = "0.31.1", default-features = false, features = ["si", "use_ser
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.67"
 csv = "1.1.6"
+env_logger = "0.9.0"
+
+[features]
