--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gpx2csv"
-version = "0.1.2"
+version = "0.1.4"
 description = "Parses .GPX files to .JSON and .CSV"
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
@@ -17,4 +17,6 @@ clap = "2.33.3"
 serde = "1.0.130"
 chrono = "0.4.19"
 serde_json = "1.0.68"
-simple_logger = "1.13.0"
+env_logger = "0.9.0"
+
+[features]
