--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fit2json"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["evensolberg <even.solberg@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -8,7 +8,9 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.9.0"
 fitparser = "0.4.2"
+log = "0.4.14"
 serde = "1.0.130"
 serde_json = "1.0.68"
 structopt = "0.3.23"
