--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -14,7 +14,7 @@ gpx = "0.8.5"
 csv = "1.1.6"
 log = "0.4.14"
 clap = "2.33.3"
-serde = "1.0.130"
+serde = { version = "1.0.130", features = ["derive"] }
 chrono = "0.4.19"
 serde_json = "1.0.68"
 env_logger = "0.9.0"
