--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -14,6 +14,6 @@ clap = "2.33.3"
 csv = "1.1.6"
 env_logger = "0.9.0"
 log = "0.4.14"
-serde = "1.0.130"
+serde = {version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
 tcx = "0.9.3"
