--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tcx2csv"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 description = "Parses .TCX files to .JSON and .CSV"
 license = "Apache-2.0"
@@ -10,6 +10,7 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.19"
 clap = "2.33.3"
 csv = "1.1.6"
 env_logger = "0.9.0"
