--- a/fit2csv/Cargo.toml
+++ b/fit2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fit2csv"
-version = "0.3.0"
+version = "0.3.1"
 description = "Parses .FIT files to .JSON and .CSV"
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
@@ -13,7 +13,7 @@ include = ["src/**/*", "README.md"]
 chrono = "0.4.19"
 
 # System utilities
-clap = "2.34.0"
+clap = { version = "3.0.0", features = ["cargo", "color"] }
 csv = "1.1.6"
 env_logger = "0.9.0"
 # Activity-related
@@ -21,8 +21,8 @@ fitparser = "0.4.3"
 log = "0.4.14"
 
 # Serialization and export
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.72"
+serde = { version = "1.0.133", features = ["derive"] }
+serde_json = "1.0.74"
 uom = { version = "0.31.1", default-features = false, features = ["si", "use_serde", "u16", "f64"] }
 
 [features]
