--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -13,10 +13,10 @@ include = ["src/**/*", "README.md"]
 gpx = "0.8.5"
 csv = "1.1.6"
 log = "0.4.14"
-clap = "2.34.0"
-serde = { version = "1.0.130", features = ["derive"] }
-chrono = "0.4.19"
-serde_json = "1.0.72"
+clap = { version = "3.0.0", features = ["cargo", "color"] }
+serde = { version = "1.0.133", features = ["derive"] }
+chrono = { version = "0.4.19", features = ["serde"] }
+serde_json = "1.0.74"
 env_logger = "0.9.0"
 
 [features]
