--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tcx2csv"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 description = "Parses .TCX files to .JSON and .CSV"
 license = "Apache-2.0"
@@ -11,10 +11,10 @@ include = ["src/**/*", "README.md"]
 
 [dependencies]
 chrono = "0.4.19"
-clap = "2.34.0"
+clap = { version = "3.0.0", features = ["cargo", "color"] }
 csv = "1.1.6"
 env_logger = "0.9.0"
 log = "0.4.14"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.72"
+serde = { version = "1.0.133", features = ["derive"] }
+serde_json = "1.0.74"
 tcx = "0.9.3"
