--- a/fitrename/Cargo.toml
+++ b/fitrename/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
-name = "gpx2csv"
-version = "0.1.4"
-description = "Parses .GPX files to .JSON and .CSV"
+name = "fitrename"
+version = "0.1.0"
+edition = "2021"
+description = "Renames .FIT, .GPX and .TCX files based on metadata."
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
-edition = "2021"
 include = ["src/**/*", "README.md"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gpx = "0.8.5"
-csv = "1.1.6"
-log = "0.4.14"
-clap = { version = "3.0.1", features = ["cargo", "color"] }
-serde = { version = "1.0.133", features = ["derive"] }
-chrono = { version = "0.4.19", features = ["serde"] }
-serde_json = "1.0.74"
+chrono = "0.4.19"
+clap = "3.0.14"
 env_logger = "0.9.0"
-
-[features]
+fitparser = "0.4.3"
+gpx = "0.8.5"
+log = "0.4.14"
+tcx = "0.9.3"
+uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64"] }
+serde = { version = "1.0.133", features = ["derive"] }
