--- a/fitrename/Cargo.toml
+++ b/fitrename/Cargo.toml
@@ -10,12 +10,14 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.19"
 clap = "3.0.14"
 env_logger = "0.9.0"
 fitparser = "0.4.3"
 gpx = "0.8.5"
 log = "0.4.14"
 tcx = "0.9.3"
+
+# chrono = { version = "0.4", features = ["serde"] }
+chrono = "0.4"
 uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64"] }
 serde = { version = "1.0.133", features = ["derive"] }
