--- a/fit2csv/Cargo.toml
+++ b/fit2csv/Cargo.toml
@@ -25,4 +25,8 @@ serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.75"
 uom = { version = "0.32.0", default-features = false, features = ["si", "use_serde", "u16", "f64"] }
 
-[features]
+# Our own package
+utilities = { path = "../utilities" }
+
+[dev-dependencies]
+assay = "0.1.0"
