--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -19,4 +19,8 @@ chrono = { version = "0.4.19", features = ["serde"] }
 serde_json = "1.0.74"
 env_logger = "0.9.0"
 
-[features]
+# Our own crate
+utilities = { path = "../utilities" }
+
+[dev-dependencies]
+assay = "0.1.0"
