--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -10,7 +10,17 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# System
 chrono = { version = "0.4", features = ["serde"] }
 uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.75"
+log = "0.4.14"
+csv = "1.1.6"
+
+# Fitness
+tcx = "0.9.3"
+
+
+[dev-dependencies]
+assay = "0.1.0"
