--- a/fitrename/Cargo.toml
+++ b/fitrename/Cargo.toml
@@ -12,15 +12,15 @@ include = ["src/**/*", "README.md"]
 [dependencies]
 clap = { version = "3.1.0", features = ["cargo", "color"] }
 env_logger = "0.9.0"
+log = "0.4.14"
+
+# Fitness
 fitparser = "0.4.3"
 gpx = "0.8.5"
-log = "0.4.14"
 tcx = "0.9.3"
 
 # chrono = { version = "0.4", features = ["serde"] }
 chrono = "0.4.19"
-uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64"] }
-serde = { version = "1.0.136", features = ["derive"] }
 
 # Our own package
 utilities = { path = "../utilities" }
