--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -10,12 +10,10 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.19"
+# chrono = "0.4.19"
 clap = { version = "3.0.8", features = ["cargo", "color"] }
 env_logger = "0.9.0"
 log = "0.4.14"
-serde = { version = "1.0.133", features = ["derive"] }
-serde_json = "1.0.75"
 tcx = "0.9.3"
 
 # Our own crate
