--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -12,7 +12,7 @@ include = ["src/**/*", "README.md"]
 [dependencies]
 # System
 chrono = { version = "0.4", features = ["serde"] }
-uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64"] }
+uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64", "use_serde"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.75"
 log = "0.4.14"
