--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -15,9 +15,11 @@ chrono = { version = "0.4", features = ["serde"] }
 uom = { version = "0.32.0", default-features = false, features = ["si", "u16", "f64", "use_serde"] }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.75"
+env_logger = "0.9.0"
 log = "0.4.14"
 csv = "1.1.6"
 convert_case = "0.5.0"
+clap = { version = "3.0.8", features = ["cargo", "color"] }
 
 # Fitness
 fitparser = "0.4.3"
