--- a/fitshow/Cargo.toml
+++ b/fitshow/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fitshow"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "Shows the metadata from .FIT, .GPX and .TCX files."
 license = "Apache-2.0"
@@ -10,10 +10,10 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "3.1.0", features = ["cargo", "color"] }
 env_logger = "0.9.0"
 log = "0.4.14"
-
 
 # Our own package
 utilities = { path = "../utilities" }
