--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "fit2csv",
     "fit2json",
     "fitrename",
-    "fitshow",
+    "fitview",
     "gpx2csv",
     "tcx2csv",
     "utilities",
