--- a/fitview/Cargo.toml
+++ b/fitview/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fitshow"
+name = "fitview"
 version = "0.3.0"
 edition = "2021"
 description = "Shows the metadata from .FIT, .GPX and .TCX files."
