--- a/fitrename/Cargo.toml
+++ b/fitrename/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "fitrename"
-version = "0.3.1"
+version = "0.4.0"
 edition = "2021"
 description = "Renames .FIT, .GPX and .TCX files based on metadata."
 license = "Apache-2.0"
@@ -12,7 +12,7 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.1.12", features = ["cargo", "color"] }
+clap = { version = "4.1.9", features = ["cargo", "wrap_help", "env"] }
 env_logger = "0.10.0"
 log = "0.4.16"
 
