--- a/fitview/Cargo.toml
+++ b/fitview/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fitview"
-version = "0.3.1"
+version = "0.4.0"
 edition = "2021"
 description = "Shows the metadata from .FIT, .GPX and .TCX files."
 license = "Apache-2.0"
@@ -11,7 +11,7 @@ include = ["src/**/*", "README.md"]
 
 [dependencies]
 chrono = { version = "0.4.19", features = ["serde"] }
-clap = { version = "3.1.12", features = ["cargo", "color"] }
+clap = { version = "4.1.9", features = ["cargo", "wrap_help", "env"] }
 env_logger = "0.10.0"
 log = "0.4.16"
 
