--- a/gpx2csv/Cargo.toml
+++ b/gpx2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gpx2csv"
-version = "0.3.1"
+version = "0.4.0"
 description = "Parses .GPX files to .JSON and .CSV"
 license = "Apache-2.0"
 authors = ["evensolberg <even.solberg@gmail.com>"]
@@ -10,7 +10,7 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.1.12", features = ["cargo", "color"] }
+clap = { version = "4.1.9", features = ["cargo", "wrap_help"] }
 env_logger = "0.10.0"
 log = "0.4.16"
 
