--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tcx2csv"
-version = "0.2.2"
+version = "0.3.0"
 edition = "2021"
 description = "Parses .TCX files to .JSON and .CSV"
 license = "Apache-2.0"
@@ -11,7 +11,7 @@ include = ["src/**/*", "README.md"]
 
 [dependencies]
 # chrono = "0.4.19"
-clap = { version = "3.1.12", features = ["cargo", "color"] }
+clap = { version = "4.1.9", features = ["cargo", "wrap_help", "env"] }
 env_logger = "0.10.0"
 log = "0.4.16"
 tcx = "0.9.3"
