--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -8,9 +8,10 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-env_logger = "0.10.0"
-fitparser = "0.6.0"
-log = "0.4.18"
-serde = "1.0.163"
-serde_json = "1.0.96"
+log = { workspace = true }
+env_logger = { workspace = true }
+serde = "1.0.187"
+serde_json = "1.0.105"
 structopt = "0.3.26"
+
+fitparser = { workspace = true }
