--- a/fitrename/Cargo.toml
+++ b/fitrename/Cargo.toml
@@ -2,7 +2,7 @@
 
 [package]
 name = "fitrename"
-version = "0.4.2"
+version = "0.4.3"
 edition = "2021"
 description = "Renames .FIT, .GPX and .TCX files based on metadata."
 license = "Apache-2.0"
@@ -12,17 +12,17 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.2", features = ["cargo", "wrap_help", "env"] }
-env_logger = "0.10.0"
-log = "0.4.18"
+clap = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
 
 # Fitness
-fitparser = "0.6.0"
-gpx = "0.9.1"
-tcx = "0.9.3"
+fitparser = { workspace = true }
+gpx  = { workspace = true }
+tcx  = { workspace = true }
 
 # chrono = { version = "0.4", features = ["serde"] }
-chrono = "0.4.26"
+chrono = { workspace = true }
 
 # Our own package
 utilities = { path = "../utilities" }
