--- a/fitview/Cargo.toml
+++ b/fitview/Cargo.toml
@@ -10,10 +10,11 @@ include = ["src/**/*", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 chrono = { version = "0.4.26", features = ["serde"] }
-clap = { version = "4.3.2", features = ["cargo", "wrap_help", "env"] }
-env_logger = "0.10.0"
-log = "0.4.18"
+clap = { workspace = true }
+env_logger = { workspace = true }
+log  = { workspace = true }
 
 # Our own package
 utilities = { path = "../utilities" }
