--- a/tcx2csv/Cargo.toml
+++ b/tcx2csv/Cargo.toml
@@ -20,4 +20,4 @@ tcx = { workspace = true }
 utilities = { path = "../utilities" }
 
 [dev-dependencies]
-assay = "0.1.1"
+assay = { workspace = true }
