--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,17 @@ resolver = "2"
 strip = true
 
 [workspace.dependencies]
-clap = { version = "4.4.7", features = ["cargo", "wrap_help", "env"] }
+clap = { version = "4.4.7", features = ["env"] }
 log = "0.4.20"
-env_logger = "0.10.0"
-chrono = { version = "0.4.31", features = ["serde"] }
+env_logger = "0.11.3"
+chrono = "0.4.31"
 csv = "1.2.2"
-serde = { version = "1.0.188", features = ["derive"] }
-fitparser = "0.6.1"
-gpx = "0.9.1"
+serde = "1.0.188"
+fitparser = "0.7.0"
+gpx = "0.10.0"
 tcx = "0.9.3"
+assay = "0.1.1"
+convert_case = "0.6.0"
+serde_json = "1.0.107"
+structopt = "0.3.26"
+uom = { version = "0.36.0", default-features = false }
