--- a/fit2json/Cargo.toml
+++ b/fit2json/Cargo.toml
@@ -10,8 +10,8 @@ license = "Apache-2.0"
 [dependencies]
 log = { workspace = true }
 env_logger = { workspace = true }
-serde = "1.0.188"
-serde_json = "1.0.107"
-structopt = "0.3.26"
+serde = { workspace = true }
+serde_json = { workspace = true }
+structopt = { workspace = true }
 
 fitparser = { workspace = true }
