--- a/fitview/Cargo.toml
+++ b/fitview/Cargo.toml
@@ -18,4 +18,4 @@ log  = { workspace = true }
 utilities = { path = "../utilities" }
 
 [dev-dependencies]
-assay = "0.1.1"
+assay = { workspace = true }
